--- a/Index.HTML
+++ b/Index.HTML
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <title>Brand Logo</title>
-    <meta name="description" content="Brand logo display page" />
+    <title>นายเพชรรังสี เพชรโชติ</title>
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class="label">
-        <img class="image" src="img/image.png" alt="Brand logo" />
-      </div>
+      <h1 class="label">
+        <span class="text-wrapper">นายเพชรรังสี เพชรโชติ</span>
+      </h1>
     </header>
-    <main>
-      <!-- Main content would go here -->
-    </main>
-    <footer>
-      <!-- Footer content would go here -->
-    </footer>
   </body>
 </html>
