--- a/index.html
+++ b/index.html
@@ -1,51 +1,108 @@
-import React from "react";
-import fullsizerender1 from "./fullsizerender-1.png";
-import image2 from "./image-2.png";
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>แนะนำตัว - นายเพชรรังสี เพชรโชติ</title>
 
-export const Frame = () => {
-  return (
-    <main className="bg-white grid justify-items-center [align-items:start] w-screen">
-      <article className="bg-white w-[1077px] h-[803px] relative">
-        <header
-          className="top-0 absolute w-[1077px] h-[74px] left-0 bg-[#ea1f1f]"
-          role="banner"
-        />
+  <style>
+    /* ใช้ฟอนต์ Google Sarabun */
+    @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap');
 
-        <section className="relative">
-          <img
-            className="absolute w-[242px] h-[327px] top-[89px] left-[13px] aspect-[0.74] object-cover"
-            alt="Portrait of นายเพชรรังสี เพชรโชติ"
-            src={fullsizerender1}
-          />
+    body {
+      font-family: 'Sarabun', sans-serif;
+      background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #222;
+    }
 
-          <h1 className="top-[125px] left-[291px] [font-family:'Inter-Regular',Helvetica] text-[64px] absolute font-normal text-black tracking-[0] leading-[normal]">
-            นายเพชรรังสี เพชรโชติ
-          </h1>
+    .container {
+      background-color: #fff;
+      padding: 40px 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
+      max-width: 500px;
+      width: 90%;
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
 
-          <h2 className="top-[351px] left-[291px] [font-family:'Noto_Looped_Thai_UI-Regular',Helvetica] text-[40px] absolute font-normal text-black tracking-[0] leading-[normal]">
-            โรงเรยนสวนกุหลาบวิทยาลัย นนทบุรี
-          </h2>
+    .container:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+    }
 
-          <h3 className="top-[539px] left-[82px] [font-family:'Inter-Regular',Helvetica] text-[40px] whitespace-nowrap absolute font-normal text-black tracking-[0] leading-[normal]">
-            ดีค้าบอ้วน
-          </h3>
+    img.profile {
+      width: 160px;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 5px solid #4a90e2;
+      box-shadow: 0 5px 15px rgba(74, 144, 226, 0.5);
+      margin-bottom: 25px;
+      transition: box-shadow 0.3s ease;
+    }
 
-          <p className="top-[632px] left-3 [-webkit-text-stroke:1px_#0b0a0a] [font-family:'Noto_Looped_Thai-Regular',Helvetica] text-4xl absolute font-normal text-black tracking-[0] leading-[normal]">
-            ผมชื่อแสงครับอยากเข้าคณะนิติศาสตร์เพื่อนำมาช่วยเหลือผู้อื่น
-          </p>
+    img.profile:hover {
+      box-shadow: 0 5px 25px rgba(74, 144, 226, 0.8);
+    }
 
-          <img
-            className="absolute w-[188px] h-[188px] top-[431px] left-[867px] aspect-[1] object-cover"
-            alt="School or organization logo"
-            src={image2}
-          />
-        </section>
+    h1 {
+      font-weight: 700;
+      font-size: 2.4rem;
+      margin-bottom: 10px;
+      color: #1a1a1a;
+    }
 
-        <footer
-          className="top-[729px] absolute w-[1077px] h-[74px] left-0 bg-[#ea1f1f]"
-          role="contentinfo"
-        />
-      </article>
-    </main>
-  );
-};
+    p {
+      font-weight: 400;
+      font-size: 1.25rem;
+      line-height: 1.6;
+      color: #555;
+      margin-top: 0;
+    }
+
+    p strong {
+      color: #4a90e2;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 30px 20px;
+      }
+      img.profile {
+        width: 130px;
+        height: 130px;
+        margin-bottom: 20px;
+      }
+      h1 {
+        font-size: 1.8rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- เปลี่ยน src เป็นรูปภาพของคุณ -->
+    <img
+      class="profile"
+      src="your-photo.jpg"
+      alt="รูปของนายเพชรรังสี เพชรโชติ"
+    />
+    <h1>นายเพชรรังสี เพชรโชติ</h1>
+    <p>
+      นักเรียนผู้มีความตั้งใจอยากเข้าศึกษาต่อในคณะ
+      <strong>นิติศาสตร์</strong><br />
+      เพราะเชื่อว่า "กฎหมายคือรากฐานของความยุติธรรมในสังคม"
+    </p>
+  </div>
+</body>
+</html>
