--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- เปลี่ยน src เป็นรูปภาพของคุณ -->
+    <!-- FullSizeRender 1.jpg -->
     <img
       class="profile"
       src="your-photo.jpg"
