--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- FullSizeRender 1.jpg -->
     <img
       class="profile"
-      src="your-photo.jpg"
+      src="FullSizeRender 1.jpg"
       alt="รูปของนายเพชรรังสี เพชรโชติ"
     />
     <h1>นายเพชรรังสี เพชรโชติ</h1>
