--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <img
       class="profile"
       src="FullSizeRender 1.jpg"
-      alt="รูปของนายเพชรรังสี เพชรโชติ"
+      alt="FullSizeRender 1.jpg"
     />
     <h1>นายเพชรรังสี เพชรโชติ</h1>
     <p>
