--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>แนะนำตัว - นายเพชรรังสี เพชรโชติ</title>
 
   <style>
-    /* ใช้ฟอนต์ Google Sarabun */
     @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap');
 
     body {
@@ -15,10 +14,16 @@
       margin: 0;
       padding: 0;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       color: #222;
+    }
+
+    .top-image {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
     }
 
     .container {
@@ -26,9 +31,10 @@
       padding: 40px 30px;
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
-      max-width: 500px;
+      max-width: 600px;
       width: 90%;
       text-align: center;
+      margin: 20px 0;
       transition: transform 0.3s ease;
     }
 
@@ -52,16 +58,20 @@
       box-shadow: 0 5px 25px rgba(74, 144, 226, 0.8);
     }
 
-    h1 {
+    h1, h2 {
       font-weight: 700;
-      font-size: 2.4rem;
-      margin-bottom: 10px;
       color: #1a1a1a;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.6rem;
+      color: #4a90e2;
     }
 
     p {
       font-weight: 400;
-      font-size: 1.25rem;
+      font-size: 1.1rem;
       line-height: 1.6;
       color: #555;
       margin-top: 0;
@@ -69,6 +79,29 @@
 
     p strong {
       color: #4a90e2;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-family: 'Sarabun', sans-serif;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #4a90e2;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    button:hover {
+      background-color: #357ab8;
     }
 
     @media (max-width: 600px) {
@@ -90,13 +123,13 @@
   </style>
 </head>
 <body>
+
+  <!-- ภาพด้านบนสุดของหน้า -->
+  <img class="top-image" src="FullSizeRender 1.jpg" alt="ภาพแบนเนอร์ด้านบน" />
+
+  <!-- ข้อมูลส่วนตัว -->
   <div class="container">
-    <!-- FullSizeRender 1.jpg -->
-    <img
-      class="profile"
-      src="FullSizeRender 1.jpg"
-      alt="FullSizeRender 1.jpg"
-    />
+    <img class="profile" src="FullSizeRender 1.jpg" alt="รูปโปรไฟล์" />
     <h1>นายเพชรรังสี เพชรโชติ</h1>
     <p>
       นักเรียนผู้มีความตั้งใจอยากเข้าศึกษาต่อในคณะ
@@ -104,5 +137,32 @@
       เพราะเชื่อว่า "กฎหมายคือรากฐานของความยุติธรรมในสังคม"
     </p>
   </div>
+
+  <!-- ผลงาน -->
+  <div class="container">
+    <h2>🎖️ ผลงาน</h2>
+    <p><strong>หมวดหมู่ผลงาน:</strong> ไปค่ายลูกเสือสัมพันธ์ครั้งที่ 29</p>
+  </div>
+
+  <!-- การศึกษา -->
+  <div class="container">
+    <h2>🎓 การศึกษา</h2>
+    <p><strong>ชื่อสถาบัน:</strong> โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</p>
+    <p><strong>แผนการเรียน:</strong> STEM</p>
+  </div>
+
+  <!-- ทักษะ -->
+  <div class="container">
+    <h2>🧠 ทักษะ</h2>
+    <p><strong>Hard Skills:</strong> มีทักษะการเล่นเกมขั้นสูง</p>
+    <p><strong>Soft Skills:</strong> ใจเย็น อารมณ์ดี</p>
+  </div>
+
+  <!-- ติดต่อ -->
+  
+    <p><strong>อีเมล:</strong> 34961.skn@skn.ac.th</p>
+    <p><strong>โซเชียลมีเดีย:</strong> IG: ptos23</p>
+  </div>
+
 </body>
 </html>
