--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     body {
       font-family: 'Sarabun', sans-serif;
-      background: linear-gradient(135deg, #a1c4fd 0%, #c2e9fb 100%);
+      background: linear-gradient(135deg, #DA2128 5%,#c2e9fb 100%);
       margin: 0;
       padding: 0;
       display: flex;
@@ -123,9 +123,6 @@
   </style>
 </head>
 <body>
-
-  <!-- ภาพด้านบนสุดของหน้า -->
-  <img class="top-image" src="FullSizeRender 1.jpg" alt="ภาพแบนเนอร์ด้านบน" />
 
   <!-- ข้อมูลส่วนตัว -->
   <div class="container">
