--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
     <p><strong>หมวดหมู่ผลงาน:</strong> ไปค่ายลูกเสือสัมพันธ์ครั้งที่ 29</p>
   </div>
 
-  <!-- การศึกษา -->
+  <!-- ประวัติการศึกษา -->
   <div class="container">
     <h2>🎓 การศึกษา</h2>
-    <p><strong>ชื่อสถาบัน:</strong> โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</p>
+    <p><strong>ชื่อสถาบันปัจจุบัน:</strong> โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</p>
     <p><strong>แผนการเรียน:</strong> STEM</p>
   </div>
 
