--- a/index.html
+++ b/index.html
@@ -142,11 +142,15 @@
   </div>
 
   <!-- ประวัติการศึกษา -->
-  <div class="container">
-    <h2>🎓 การศึกษา</h2>
+<div class="container" id="education">
+  <h2>🎓 การศึกษา</h2>
+  <div id="edu-content">
     <p><strong>ชื่อสถาบันปัจจุบัน:</strong> โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</p>
     <p><strong>แผนการเรียน:</strong> STEM</p>
   </div>
+  <button onclick="nextEducation()">เพิ่มเติม</button>
+</div>
+
 
   <!-- ทักษะ -->
   <div class="container">
@@ -160,6 +164,30 @@
     <p><strong>อีเมล:</strong> 34961.skn@skn.ac.th</p>
     <p><strong>โซเชียลมีเดีย:</strong> IG: ptos23</p>
   </div>
+<script>
+  let eduStep = 0;
 
-</body>
+  function nextEducation() {
+    const eduContent = document.getElementById('edu-content');
+    eduStep++;
+
+    if (eduStep === 1) {
+      eduContent.innerHTML = `
+        <p><strong>ชื่อโรงเรียนมัธยมต้น:</strong> โรงเรียนมัธยมสาธิตวัดพระศรีมหาธาตุ มหาวิทยาลัยราชภัฏพระนคร</p>
+        <p><strong>แผนการเรียน:</strong> สามัญ</p>
+      `;
+    } else if (eduStep === 2) {
+      eduContent.innerHTML = `
+        <p><strong>ชื่อโรงเรียนประถม:</strong> โรงเรียนประชานิเวศน์</p>
+        <p><strong>กิจกรรมเด่น:</strong> แลกเปลี่ยนวัฒนธรรม ณ ประเทศสิงคโปร์</p>
+      `;
+    } else {
+      eduContent.innerHTML = `
+        <p><strong>ชื่อสถาบันปัจจุบัน:</strong> โรงเรียนสวนกุหลาบวิทยาลัย นนทบุรี</p>
+        <p><strong>แผนการเรียน:</strong> STEM</p>
+      `;
+      eduStep = 0;
+    }
+  }
+</script>
 </html>
