--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -28,10 +28,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>โครงงานกฎหมายเยาวชน</h1>
+    <h1>กิจกรรมธารน้ำใจ</h1>
     <img src="law-project.jpg" alt="ภาพโครงงาน" />
-    <p><strong>รายละเอียด:</strong> ส่งเสริมความรู้ด้านสิทธิและหน้าที่ของเยาวชนในโรงเรียน</p>
-    <p><strong>ปีที่จัดทำ:</strong> 2566</p>
+    <p><strong>รายละเอียด:</strong> นำสิ่งของไปบริจาคและทำกิจกรรมร่วมกับน้องๆ ณ โรงเรียนวัดตำหนักเหนือ</p>
+    <p><strong>ปีที่จัดทำ:</strong> 2568</p>
     <button onclick="history.back()">ย้อนกลับ</button>
   </div>
 </body>
