--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -29,7 +29,7 @@
 <body>
   <div class="container">
     <h1>กิจกรรมธารน้ำใจ</h1>
-    <img src="law-project.jpg" alt="ภาพโครงงาน" />
+    <img src="IMG_7470.jpeg" alt="ภาพโครงงาน" />
     <p><strong>รายละเอียด:</strong> นำสิ่งของไปบริจาคและทำกิจกรรมร่วมกับน้องๆ ณ โรงเรียนวัดตำหนักเหนือ</p>
     <p><strong>ปีที่จัดทำ:</strong> 2568</p>
     <button onclick="history.back()">ย้อนกลับ</button>
