--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -3,32 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <title>ผลงานเพิ่มเติม - นายเพชรรังสี</title>
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Sarabun', sans-serif;
       padding: 40px;
-      background-color: #f0f8ff;
+      background: linear-gradient(to right, #dbeeff, #f0f8ff);
       color: #333;
+      animation: fadeIn 1s ease-in;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .container {
       max-width: 700px;
       margin: auto;
-      background: #fff;
+      background: #ffffff;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease;
     }
+
+    .container:hover {
+      transform: scale(1.02);
+    }
+
+    h1 {
+      text-align: center;
+      color: #2a5d9f;
+      margin-bottom: 20px;
+    }
+
     img {
       width: 100%;
       max-width: 500px;
-      border-radius: 10px;
-      margin-bottom: 20px;
+      border-radius: 12px;
+      margin: 0 auto 20px;
+      display: block;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    img:hover {
+      transform: scale(1.03);
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    strong {
+      color: #1c3f74;
+    }
+
+    button {
+      display: block;
+      margin: 30px auto 0;
+      padding: 12px 24px;
+      font-size: 16px;
+      background-color: #2a5d9f;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #1c3f74;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>กิจกรรมธารน้ำใจ</h1>
+    <h1>🌟 กิจกรรมธารน้ำใจ 🌟</h1>
     <img src="IMG_7470.jpeg" alt="ภาพโครงงาน" />
     <p><strong>รายละเอียด:</strong> นำสิ่งของไปบริจาคและทำกิจกรรมร่วมกับน้องๆ ณ โรงเรียนวัดตำหนักเหนือ</p>
     <p><strong>ปีที่จัดทำ:</strong> 2568</p>
