--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <p><strong>แผนการเรียน:</strong> STEM</p>
   </div>
   <!-- ปุ่มในหน้าแรก -->
-<button onclick="location.href='portfolio-detail.html'">รายละเอียด</button>
+<button onclick="location.href='โรงเรียน'">รายละเอียด</button>
 </div>
 
   <!-- ทักษะ -->
