--- a/school.html
+++ b/school.html
@@ -99,7 +99,7 @@
 
     <div class="edu-block">
       <div class="edu-logo">
-        <img src="logo-kindergarten.png" alt="โลโก้อนุบาล" />
+        <img src="PN.png" alt="โลโก้อนุบาล" />
       </div>
       <div class="edu-info">
         <h2>ระดับอนุบาล</h2>
@@ -110,7 +110,7 @@
 
     <div class="edu-block">
       <div class="edu-logo">
-        <img src="logo-primary.png" alt="โลโก้ประถม" />
+        <img src="PN.png" alt="โลโก้ประถม" />
       </div>
       <div class="edu-info">
         <h2>ระดับประถมศึกษา</h2>
@@ -121,7 +121,7 @@
 
     <div class="edu-block">
       <div class="edu-logo">
-        <img src="logo-junior.png" alt="โลโก้ม.ต้น" />
+        <img src="pm.jpeg" alt="โลโก้ม.ต้น" />
       </div>
       <div class="edu-info">
         <h2>ระดับมัธยมศึกษาตอนต้น</h2>
@@ -132,7 +132,7 @@
 
     <div class="edu-block">
       <div class="edu-logo">
-        <img src="logo-senior.png" alt="โลโก้ม.ปลาย" />
+        <img src="skn.jpeg" alt="โลโก้ม.ปลาย" />
       </div>
       <div class="edu-info">
         <h2>ระดับมัธยมศึกษาตอนปลาย</h2>
