--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
     <p><strong>Hard Skills:</strong> มีทักษะการเล่นเกมขั้นสูง</p>
     <p><strong>Soft Skills:</strong> ใจเย็น อารมณ์ดี</p>
   </div>
-
+<!-- แรงบันดาลใจ -->
+  <div class="container">
+    <h2> แรงบันดาลใจ</h2>
+  </div>
   <!-- ติดต่อ -->
   
     <p><strong>อีเมล:</strong> 34961.skn@skn.ac.th</p>
@@ -183,7 +186,6 @@
     const eduContent = document.getElementById('edu-content');
     eduStep++;
 
-    
-  }
+   }
   </script>
 </html>
