--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 <!-- แรงบันดาลใจ -->
   <div class="container">
     <h2> แรงบันดาลใจ</h2>
+    <button onclick="location.href='portfolio-detail.html'">รายละเอียด</button>
   </div>
   <!-- ติดต่อ -->
   
