--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <!-- แรงบันดาลใจ -->
   <div class="container">
     <h2> แรงบันดาลใจ</h2>
-    <button onclick="location.href='SOP'">รายละเอียด</button>
+    <button onclick="location.href='SOP.html'">รายละเอียด</button>
   </div>
   <!-- ติดต่อ -->
   
